1. Add full screen mode

--- a/index.html
+++ b/index.html
@@ -15,23 +15,24 @@
       }
       .video-container {
         position: absolute;
-        width: 320px;
-        height: 240px;
-        background: silver;
+        width: 1024px;
+        height: 768px;
         opacity: 0;
-        font-size: 60px;
-        color: white;
         transition: opacity 1s;
+        -webkit-filter: grayscale(1);
       }
       .video-container.show {
         opacity: 1;
+      }
+      .video-container.mirror {
+        transform: scaleX(-1);
       }
       .video-container[data-pos="left"] {
         left: 0;
         top: 0;
       }
       .video-container[data-pos="right"] {
-        left: 320px;
+        left: 1024px;
         top: 0;
       }
     </style>
